<resources>
    <string name="app_name">MQTT Android Client</string>
    <string name="title_connect">Параметры</string>
    <string name="title_buttons">Управление</string>
    <string name="title_console">Чатик</string>
    <string name="mqtt_server_address">Адрес MQTT-сервера</string>
    <string name="default_ip_add">127.0.0.1</string>
    <string name="default_mqtt_port">1883</string>
    <string name="btn_text_connect">Подключиться</string>
    <string name="btn_text_send_test_test">Отправить test/test</string>
    <string name="btn_text_disconnect">Разорвать соединение</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_text_work_mode">Режим исполнителя команд</string>
    <string name="btn_text_on_light">Включить фонарик</string>
    <string name="btn_text_off_light">Выключить фонарик</string>
    <string name="notification_text">Привет с другого телефона!</string>
    <string name="btn_text_notification">Отправить уведомление</string>
    <string name="btn_text_dial">Отправить команду вызова</string>
    <string name="edit_text_hint_message">Введи сообщение для уведомления</string>
    <string name="edit_text_message_default">Message</string>
    <string name="edit_text_hing_phone_number">Введи номер для звонка</string>
    <string name="edit_text_phone_number_default">+7</string>
</resources>
