<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textViewAddressMQTT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mqtt_server_address" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextIpAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/default_ip_add"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextPortMQTT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/default_mqtt_port"
                android:autofillHints="" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_connect" />

        <Button
            android:id="@+id/buttonSendTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_send_test_test"
            android:visibility="invisible" />


    </LinearLayout>

</FrameLayout>